[gd_scene load_steps=3 format=3 uid="uid://d0yn8sj7ak7gb"]

[ext_resource type="Script" path="res://ShowcaseContainer.gd" id="1_0v1jf"]
[ext_resource type="Texture2D" uid="uid://biigb8gxmwrpj" path="res://Assets/Tools/Laser/LaserMk4.png" id="2_3pd8v"]

[node name="ShowcaseContainer" type="Node2D"]
script = ExtResource("1_0v1jf")

[node name="TextureButton" type="TextureButton" parent="."]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("2_3pd8v")

[connection signal="button_down" from="TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="button_up" from="TextureButton" to="." method="_on_texture_button_button_up"]
